Workshop/ingress/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: city-trip-in
spec:
  rules:
